--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!---------->
     <!-- meta -->
 
-    <title>Resource Calculator - PalBox Plus</title>
+    <title>Resource Calculator</title>
 
     <!-- end meta -->
     <!-------------->
